[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
soroban-sdk = "21.0.0"
smart-wallet = { git = "https://github.com/kalepail/passkey-kit.git", branch = "next-dima" }
smart-wallet-interface = { git = "https://github.com/kalepail/passkey-kit.git", branch = "next-dima" }


[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
