[package]
name = "protecctor"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
smart-wallet = {workspace = true}
smart-wallet-interface = {workspace = true}
[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
